# django-mrw

./: README.md  pyproject.toml
src/mrw/: apps.py  forms.py  models.py  services.py  urls.py  views.py
src/mrw/fixtures/prompts/: base_1.md
src/mrw/migrations/: 0001_initial.py
src/mrw/templates/mrw/: parse_chat.html
